--- a/index.css
+++ b/index.css
@@ -32,9 +32,11 @@ li {
     background: rgb(250, 180, 192);
 }
 .delete {
+    background: url(x.png);
     float: right;
-    padding: 6px;
     margin-top: -3px;
-    width: 25px;
-    height: 25px;
+    border: 0px;
+    width: 10px;
+    width: 23px;
+   height: 30px;
 }
